@@ -6,7 +6,6 @@ import pl.edu.pw.calendarapp.event.EventView;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class CalendarMapper {
     private CalendarMapper() {
@@ -17,13 +16,24 @@ public class CalendarMapper {
             final CalendarView view = new CalendarView();
             view.setId(c.getCalendarId() != null ? c.getCalendarId() : -1L);
             view.setName(c.getName());
+            view.setPublic(Boolean.TRUE.equals(calendar.getIsPublic()));
             final List<EventView> events = Optional.ofNullable(c.getEvents())
                     .map(l -> l.stream()
                             .map(EventMapper::map)
                             .filter(Objects::nonNull)
-                            .collect(Collectors.toList()))
+                            .toList())
                     .orElse(List.of());
             view.setEvents(events);
+            return view;
+        }).orElse(null);
+    }
+
+    public static CalendarView mapPreview(final Calendar calendar) {
+        return Optional.ofNullable(calendar).map(c -> {
+            final CalendarView view = new CalendarView();
+            view.setId(c.getCalendarId() != null ? c.getCalendarId() : -1L);
+            view.setName(c.getName());
+            view.setPublic(Boolean.TRUE.equals(calendar.getIsPublic()));
             return view;
         }).orElse(null);
     }
